--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -10,6 +10,8 @@ $blue:     #6a9fb5;
 $magenta:  #aa759f;
 $brown:    #8f5536;
 $default:  #505050;
+$green:    #1DDB16;
+$navy:     #183d88;
 
 $white:      #fff;
 $lightgrey:  #eee;
